[package]
name = "nes-bundler"
description = ""
version = "1.4.0"
authors = ["Ted Steen <ted.steen@gmail.com>"]
edition = "2024"
publish = false

[features]
default = []

netplay = ["matchbox_socket", "ggrs", "futures-timer", "uuid", "reqwest", "md5"]
debug = ["egui_plot", "puffin", "puffin_egui"]

# Playable framerates in development
[profile.dev]
opt-level = 1
# codegen-backend = "cranelift"
panic = 'unwind'
debug = true
strip = false

[profile.profiling]
inherits = "release"
panic = 'unwind'
debug = true
strip = false

[profile.release]
codegen-units = 1
#lto = true #TODO: This adds a lot of time to the build.. Perhaps not worth it?
strip = true
panic = 'abort'

[dependencies]
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
bitflags = "2"
rand = "0.9"

tokio = { version = "1", features = [
  "rt",
  "macros",
  "rt-multi-thread",
  "sync",
] }
futures = "0.3"

egui = { version = "0.31", default-features = false, features = [
  "bytemuck",
  "default_fonts",
] }
egui_plot = { version = "0.32", optional = true }

# TODO: Use stable version of puffin and puffin_egui when https://github.com/EmbarkStudios/puffin/pull/234 is merged
puffin = { git = "https://github.com/tedsteen/puffin.git", branch = "upgrade-egui", optional = true }
puffin_egui = { git = "https://github.com/tedsteen/puffin.git", branch = "upgrade-egui", optional = true }

egui-winit = "0.31"
egui-wgpu = "0.31"
winit = "0.30"
wgpu = { version = "24.0", features = ["dx12", "metal"] }
raw-window-handle = "0.6"

sdl2 = { version = "0.37", features = ["bundled", "static-link"] }

tetanes-core = { git = "https://github.com/lukexor/tetanes.git" }
postcard = { version = "1.1", features = ["alloc"] }
thingbuf = "0.1"

base64 = "0.22"
directories = "6.0"

# Netplay deps
matchbox_socket = { version = "0.12", features = ["ggrs"], optional = true }
futures-timer = { version = "3", features = ["wasm-bindgen"], optional = true }
ggrs = { version = "0.11", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
md5 = { version = "0.7", optional = true }

[build-dependencies]
anyhow = "1.0"
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
tinytemplate = "1.2"
winres = "0.1"
